[project]
name = "nisar-planning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "geopandas>=1.1.1",
    "pygmt>=0.17.0",
    "pyproj>=3.7.2",
    "shapely>=2.1.2",
    "skyfield>=1.53",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
